--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>performance-ballerina</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Artifacts for WSO2 Ballerina Performance Tests</name>
+    <name>Artifacts for Ballerina Performance Tests</name>
     <inceptionYear>2018</inceptionYear>
     <url>http://wso2.com</url>
 
@@ -53,6 +53,5 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <performance.apim.version>0.1.0-SNAPSHOT</performance.apim.version>
     </properties>
 </project>
